[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meal-tracking-agent"
version = "0.1.0"
description = "Telegram-based meal tracking agent with AI meal analysis and daily reports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "anthropic>=0.40.0",
  "fastapi>=0.115.0",
  "langgraph==0.6.11",
  "langchain-anthropic>=1.4.3",
  "langchain-openai>=1.2.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-telegram-bot>=21.6",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
